# market_code

./: CMakeLists.txt  Readme.md  a.sh  fuzz_target.cpp  fuzz_test.sh  run_real_fuzz.sh
.github/workflows/: ci.yml
fuzz_build/: fuzzer
fuzz_input/: seed1.txt
fuzz_inputs/message_parser/: seed1.txt
fuzz_inputs/order_parser/: seed1.txt
fuzz_output/master/: fuzzer_setup  fuzzer_stats  plot_data
fuzz_output/master/crashes/: README.txt  id:000000,sig:11,src:000001,time:74,execs:90,op:havoc,rep:8  id:000001,sig:11,src:000001,time:333,execs:268,op:havoc,rep:4  id:000002,sig:11,src:000001,time:439,execs:351,op:havoc,rep:16  id:000003,sig:11,src:000001,time:2368,execs:1988,op:havoc,rep:8  id:000004,sig:11,src:000001,time:2942,execs:2498,op:havoc,rep:16  id:000005,sig:11,src:000001,time:11207,execs:10554,op:havoc,rep:2  id:000006,sig:11,src:000001,time:12285,execs:11608,op:havoc,rep:8  id:000007,sig:11,src:000001,time:13599,execs:12917,op:havoc,rep:16  id:000008,sig:11,src:000001,time:24361,execs:23737,op:havoc,rep:16  id:000009,sig:11,src:000008,time:34310,execs:33723,op:havoc,rep:16  id:000010,sig:11,src:000019,time:40465,execs:40010,op:havoc,rep:2  id:000011,sig:11,src:000008+000014,time:58397,execs:57788,op:splice,rep:2
fuzz_output/master/queue/: id:000001,time:0,execs:0,orig:seed5.txt  id:000002,time:0,execs:0,orig:seed4.txt  id:000004,time:0,execs:0,orig:seed2.txt  id:000009,src:000001,time:23,execs:70,op:havoc,rep:8,+cov  id:000010,src:000001,time:53,execs:80,op:havoc,rep:4,+cov  id:000011,src:000001,time:75,execs:91,op:havoc,rep:2  id:000012,src:000001,time:112,execs:117,op:havoc,rep:8,+cov  id:000013,src:000001,time:134,execs:128,op:havoc,rep:2,+cov  id:000014,src:000001,time:161,execs:146,op:havoc,rep:16,+cov  id:000015,src:000001,time:218,execs:192,op:havoc,rep:16,+cov  id:000017,src:000001,time:315,execs:259,op:havoc,rep:8,+cov  id:000018,src:000001,time:340,execs:275,op:havoc,rep:16,+cov  id:000019,src:000001,time:383,execs:305,op:havoc,rep:8,+cov  id:000020,src:000001,time:589,execs:487,op:havoc,rep:8,+cov  id:000021,src:000001,time:1841,execs:1562,op:havoc,rep:16
fuzz_tests/:  fuzz_target.cpp
include/chat/: ChatSession.h  Message.h
include/common/: Date.h
include/order/: Order.h  OrderItem.h
include/payment/: Payment.h
include/product/: Product.h  ProductCategory.h
include/user/: Admin.h  Customer.h  Merchant.h  User.h
src/: main.cpp
src/chat/: ChatSession.cpp  Message.cpp
src/common/: Date.cpp
src/order/: Order.cpp  OrderItem.cpp
src/payment/: Payment.cpp
src/product/: Product.cpp  ProductCategory.cpp
src/user/: Admin.cpp  Customer.cpp  Merchant.cpp  User.cpp
tests/: Gtest_OrderItem.cpp  Gtest_message.cpp  IntegrationTest_ChatSystem.cpp  IntegrationTest_OrderManagement.cpp
